2004-05-28  Mike Kestner  <mkestner@ximian.com>

	* en/* : put back all the real docs the updater tossed.

2004-05-28  Mike Kestner  <mkestner@ximian.com>

	* en/* : run updater. fix a few *Sharp copy/pastisms.

2004-05-27  Mike Kestner  <mkestner@ximian.com>

	* en/* : run updater

2004-04-27  John Luke  <jluke@cfl.rr.com>

	* en/Gdk/Threads.xml: document
	* en/Gtk/TargetFlags.xml: document
	* en/Gtk/TreeSelection.xml: add example
	* en/Pango/Layout.xml: add example of drawing text to a Layout

2004-04-12  Mike Kestner  <mkestner@ximian.com>

	* en/GLib/Object.xml : some more docs for the Raw property.

2004-03-17  Alex Combas  <yummyfiddlehead@yahoo.com>
	* en/Gtk/Accel.xml: Full doc.

2004-03-08  Hector E. Gomez Morales  <hectorgm@ciencias.unam.mx>
	* en/Art/Global.xml
	* en/Art/Render.xml
	* en/Art/Rgb.xml
	* en/Art/Rgba.xml
	* en/Art/Uta.xml
	* en/Gda/Command.xml
	* en/Gda/Field.xml
	* en/Gda/FieldAtributes,xml
	* en/Gda/Parameter.xml
	* en/Gdk/*.xml
	* en/Glade/XML.xml
	* en/Pango/Analysis.xml
	* en/Pango/AttrIterator.xml
	* en/Pango/Context.xml
	* en/Pango/EngineLang.xml
	* en/Pango/EngineShape.xml
	* en/Pango/FontFamily.xml
	* en/Pango/FontMap.xml
	* en/Pango/FontMetrics.xml
	* en/Pango/Global.xml
	* en/Pango/GlyphItem.xml
	* en/Pango/GlyphString.xml
	* en/Pango/Layout.xml
	* en/Pango/LayoutLine.xml: Updated and/or removed various nodes.
	
2004-03-05  Hector E. Gomez Morales  <hectorgm@ciencias.unam.mx>
	* en/* : Created TODO files for every namespace (except *Sharp namespaces).
	
2004-02-29  Hector E. Gomez Morales  <hectorgm@ciencias.unam.mx>
	* Changelog: Corrected bogus year dates.
	* en/Gtk/TODO: updated TODO list.
	* en/Atk/EditableText.xml
	* en/Atk/Free.xml
	* en/Atk/NoOpObject.xml
	* en/Atk/Object.xml
	* en/Atk/StateSet.xml
	* en/Gnome/CanvasProxy.xml
	* en/Gnome/CanvasRichText.xml
	* en/Gnome/Config.xml
	* en/Gnome/DateEdit.xml
	* en/Gnome/Entry.xml
	* en/Gnome/FileEntry.xml
	* en/Gnome/Font.xml
	* en/Gnome/FontFamily.xml
	* en/Gnome/GlyphList.xml