@@ -1,6 +1,0 @@
-<Namespace Name="GLibSharp" FullName="GLibSharp" FullNameSP="GLibSharp" Maintainer="Auto">
-  <Docs>
-    <summary>Some foundation classes used in binding libraries.</summary>
-    <remarks></remarks>
-  </Docs>
-</Namespace>
