@@ -1002,7 +1002,7 @@
             zooming. Otherwise, the upper-left corner of the canvas
             window is used as the anchor point.
           </para>
-	</remarks>
+        </remarks>
       </Docs>
     </Member>
   </Members>
