@@ -428,22 +428,6 @@
         <remarks>This should be called by models after a row has been removed. The location pointed to by <paramref name="path" /> should be the location that the row previously was at. It may not be a valid location anymore.</remarks>
       </Docs>
     </Member>
-    <Member MemberName="IterNext">
-      <MemberSignature Language="C#" Value="public virtual bool IterNext (out Gtk.TreeIter iter);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>System.Boolean</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="iter" Type="Gtk.TreeIter&amp;" RefType="out" />
-      </Parameters>
-      <Docs>
-        <summary>Sets <paramref name="iter" /> to point to the node following it at the current level.</summary>
-        <param name="iter">an object of type <see cref="T:Gtk.TreeIter" /></param>
-        <returns>an object of type <see cref="T:System.Boolean" /></returns>
-        <remarks>If there is no next iter, <see langword="false" /> is returned and iter is set to be invalid.</remarks>
-      </Docs>
-    </Member>
     <Member MemberName="GetValist">
       <MemberSignature Language="C#" Value="public virtual void GetValist (Gtk.TreeIter iter, IntPtr var_args);" />
       <MemberType>Method</MemberType>
@@ -1634,6 +1618,22 @@ store = new TreeStore (typeof (int), typeof (string));
         <param name="column">a <see cref="T:System.Int32" /></param>
         <param name="value">a <see cref="T:GLib.Value" /></param>
         <remarks>To be added</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="IterNext">
+      <MemberSignature Language="C#" Value="public virtual bool IterNext (ref Gtk.TreeIter iter);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Boolean</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="iter" Type="Gtk.TreeIter&amp;" RefType="ref" />
+      </Parameters>
+      <Docs>
+        <summary>Sets <paramref name="iter" /> to point to the node following it at the current level.</summary>
+        <param name="iter">an object of type <see cref="T:Gtk.TreeIter" /></param>
+        <returns>an object of type <see cref="T:System.Boolean" /></returns>
+        <remarks>If there is no next iter, <see langword="false" /> is returned and iter is set to be invalid.</remarks>
       </Docs>
     </Member>
   </Members>
