@@ -1,6 +1,0 @@
-<Namespace Name="GtkSharp" FullName="GtkSharp" FullNameSP="GtkSharp" Maintainer="Auto">
-  <Docs>
-    <summary>Some foundation classes used in binding libraries.</summary>
-    <remarks></remarks>
-  </Docs>
-</Namespace>
