@@ -1,5 +1,11 @@
 2004-05-28  Mike Kestner  <mkestner@ximian.com>
 
+	* Makefile.am : fix disthook
+	* en/*Sharp.xml : kill
+	* en/* : run updater again for the TreeModel API change.
+
+2004-05-28  Mike Kestner  <mkestner@ximian.com>
+
 	* en/* : put back all the real docs the updater tossed.
 
 2004-05-28  Mike Kestner  <mkestner@ximian.com>
